#pragma once
}

    };
        using VaccinationCenter::VaccinationCenter;
    public:
    class HealthcareCenter : public VaccinationCenter {

namespace Core::Domain::Model {

#include "VaccinationCenter.h"


