@startuml
title PVMS – Domain Model

hide methods
skinparam classAttributeIconSize 0

' ===================== SNS Users =====================
class SNSUser {
+ snsUserNumber : String {unique}
  + name : String
  + birthDate : Date
  + sex : String [0..1]
  + postalAddress : String
  + phone : String {unique}
  + email : String {unique}
  + citizenCardNumber : String {unique}
}

' ===================== Staff =====================
abstract StaffMember {

  + name : String
  + postalAddress : String
  + phone : String
  + email : String
}

class Receptionist extends StaffMember
class Nurse extends StaffMember
note right of Nurse : Authorized to access full health data
class DGSAdministrator extends StaffMember

' ===================== Centers =====================
abstract VaccinationCenter {

  + name : String
  + postalAddress : String
  + phone : String
  + email : String
  + website : String
  + maxVaccinesPerHour : Integer
  + openingHours : Time
  + closingHours : Time
}

class HealthcareCenter extends VaccinationCenter
class CommunityMassVaccinationCenter extends VaccinationCenter

' Which vaccine types a center can administer
VaccinationCenter "1" -- "0..*" VaccineType : supports >

' ===================== Vaccines =====================
class VaccineType {

  + disease : String
  + shortDescription : String
}

class Vaccine {

  + commercialName : String
  + brand : String
  + technologyUsed : String
}

VaccineType "1" -- "1..*" Vaccine : has brands of >

' ===================== Appointments & Events =====================
enum AppointmentStatus {
  Scheduled
  Arrived
  Ready
  InProgress
  Vaccinated
  Cancelled
  NoShow
}

class Appointment {

  + date : Date
  + time : Time
  + status : AppointmentStatus
  + arrivalDateTime : DateTime
}

class VaccinationEvent {

  + lotNumber : String
  + administrationDateTime : DateTime
}

class AdverseReaction {

  + description : String
  + severity : String
  + observedAt : DateTime
  + notes : String
}

class VaccinationCertificate {

  + issueDate : Date
}

' ===================== Outbreak / Defaults =====================
class Outbreak {

  + name : String
  + startDate : Date
  + current : Boolean
}

class WaitingRoom {
  + name : String
}

class CheckIn {
  + dateTime : DateTime
}


class VaccineSchedule {
    - snsNumber
    - date
    - time
}

' ===================== Associations =====================
SNSUser "1" -- "0..*" Appointment : schedules >
Appointment "0..*" -- "1" VaccinationCenter : at >
Appointment "0..*" -- "1" VaccineType : is for >

Appointment "1" -- "0..1" VaccinationEvent : results in >
VaccinationEvent "0..*" -- "1" Vaccine : records brand/lot of >
VaccinationEvent "1" -- "0..*" AdverseReaction : captures >

SNSUser "1" -- "0..*" VaccinationCertificate : obtains >
VaccinationEvent "1" -- "1" VaccinationCertificate : documents >
Nurse "1" -- "0..*" VaccinationEvent : administers >
Nurse "1" -- "0..*" VaccinationCertificate : issues on-site >

StaffMember "0..*" -- "0..*" VaccinationCenter : works at >

Outbreak "0..1" -- "1" VaccineType : defaultFor >

VaccinationCenter "1" -- "1..*" WaitingRoom : has >
Appointment "1" -- "0..1" CheckIn : generates >
CheckIn "1" -- "1" WaitingRoom : assigns to >
Receptionist "1" -right-- "0..*" VaccineSchedule: schedules >
Receptionist "1" -down-- "0..*" SNSUser: manages >

VaccineSchedule "*" -right-- "1" SNSUser: for >
VaccineSchedule "*" -down-- "1" VaccineType: of >
VaccineSchedule "*" -down-- "1" VaccinationCenter: at >

@enduml
